# Confluence_bot

./: .gitignore  LICENSE  README.md  pyproject.toml  ui.py
app/: main.py
app/api/: routes.py
app/chains/: rag_chain.py
app/core/: config.py  database.py
app/ingestion/: chunker.py  confluence_fetcher.py  confluence_loader.py  loader.py
app/retriever/: embeddings.py  vector_store.py
data/: confluence_pages.json
