[project]
name = "confluence-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
]
